--- a/webextension/tests/meson.build
+++ b/webextension/tests/meson.build
@@ -20,6 +20,7 @@ if geckodriver_prog.found()
 	test_suite = ['firefox-webextension','webextension']
 	test('firefox-furaffinity',webextension_browser_test_prog, args: ['browser_geckodriver','platform_furaffinity',files('../../webext-adder/tests/furaffinity.net.json')], env: webext_test_env, protocol: 'tap', timeout: 600, depends: geckodriver_test_deps, suite: test_suite, is_parallel: false)
 	test('firefox-artstation',webextension_browser_test_prog, args: ['browser_geckodriver','platform_artstation',files('../../webext-adder/tests/artstation.com.json')], env: webext_test_env, protocol: 'tap', timeout: 600, depends: geckodriver_test_deps, suite: test_suite, is_parallel: false)
+	test('firefox-deviantart',webextension_browser_test_prog, args: ['browser_geckodriver','platform_deviantart',files('../../webext-adder/tests/deviantart.com.json')], env: webext_test_env, protocol: 'tap', timeout: 600, depends: geckodriver_test_deps, suite: test_suite, is_parallel: false)
 	
 	if get_option('tests_nsfw')
 		test('firefox-e621',webextension_browser_test_prog, args: ['browser_geckodriver','platform_e621',files('../../webext-adder/tests/e621.net.json')], env: webext_test_env, protocol: 'tap', timeout: 600, depends: geckodriver_test_deps, suite: test_suite, is_parallel: false)
