--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -119,7 +119,7 @@ jobs:
         run: sudo dpkg -i arcollect.deb
         shell: bash
       - name: Run `webext-adder-online` test
-        run: python3 webext-adder/tests/webext-adder-test.py webext-adder-online $(find -regex '.*\.[a-z]+.json')
+        run: python3 webext-adder/tests/webext-adder-test.py webext-adder-online $(find -regex '.*\.[a-z]+.json' | grep -vF -e deviantart)
         shell: bash
         env:
           ARCOLLECT_DEBUG: all
