Moved /db-schema -> /sqls
	This folder is no longer specific to the schema

--- a/desktop-app/meson.build
+++ b/desktop-app/meson.build
@@ -34,7 +34,7 @@ deskapp_srcs = [
 	roboto_proj.get_variable('gen_roboto_target')[0],
 ]
 deskapp_additional_srcs = [
-	db_schema_sources_target[1], # for <arcollect-db-schema.hpp>
+	db_schema_sources_target[1], # for <arcollect-sqls.hpp>
 	roboto_proj.get_variable('gen_roboto_target')[1],
 ]
 
