Moved some webext-adder SQL statements in /sqls

--- a/sqls/meson.build
+++ b/sqls/meson.build
@@ -1,4 +1,7 @@
 db_schema_src = [
+	'adder_insert_account.sql',
+	'adder_insert_artwork.sql',
+	'adder_insert_tag.sql',
 	'boot.sql',
 	'init.sql',
 	'preload_artworks.sql',
