--- a/webext-adder/meson.build
+++ b/webext-adder/meson.build
@@ -8,6 +8,7 @@ webext_adder_deps = [
 webext_adder_srcs = [
 	'adder.cpp',
 	'main.cpp',
+	db_schema_sources_target[1], # for <arcollect-sqls.hpp>
 ]
 
 if (host_machine.system() == 'windows')
