[webextension] Don't reconfigure at each content-script edit

--- a/webextension/content-scripts/meson.build
+++ b/webextension/content-scripts/meson.build
@@ -1,4 +1,4 @@
 foreach file: webext_content_scripts
 	webext_zip_cmds += 'content-scripts'/file
-	webext_zip_depend_files += configure_file(output: file, input: file, copy: true)
+	webext_zip_depends += custom_target(file, command: python_copy_command, input: file, output: file)
 endforeach
