[desktop-app] Extracted artwork deletion SQL in sqls/delete_artwork.sql

--- a/sqls/meson.build
+++ b/sqls/meson.build
@@ -3,6 +3,7 @@ db_schema_src = [
 	'adder_insert_artwork.sql',
 	'adder_insert_tag.sql',
 	'boot.sql',
+	'delete_artwork.sql',
 	'init.sql',
 	'preload_artworks.sql',
 	'upgrade_v2.sql',
