--- a/subprojects/packagefiles/Imath-3.0.5/meson.build
+++ b/subprojects/packagefiles/Imath-3.0.5/meson.build
@@ -1,3 +1,43 @@
+# Imath meson.build for embeding
+#
+# Copyright (C) 2021 DevilishSpirits (aka D-Spirits or Luc B.)
+#
+# This file is distributed without any warranty and is not endorsed by the
+# "Imath" project <https://github.com/AcademySoftwareFoundation/Imath>.
+#
+# This file is based on the upstream CMakeLists.txt and use the upstream license
+# with a copy provided below.
+#
+# This license notice only apply to this file. Arcollect is published under the
+# GPL-3.0 license with some part being explicitely shared under another license.
+#
+# Copy of the Imatch license :
+# Copyright Contributors to the OpenEXR Project. All rights reserved.
+#
+# Redistribution and use in source and binary forms, with or without
+# modification, are permitted provided that the following conditions are met:
+#
+# 1. Redistributions of source code must retain the above copyright notice, this
+# list of conditions and the following disclaimer.
+#
+# 2. Redistributions in binary form must reproduce the above copyright notice,
+# this list of conditions and the following disclaimer in the documentation
+# and/or other materials provided with the distribution.
+#
+# 3. Neither the name of the copyright holder nor the names of its contributors
+# may be used to endorse or promote products derived from this software without
+# specific prior written permission.
+#
+# THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS"
+# AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
+# IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
+# DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR CONTRIBUTORS BE LIABLE
+# FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL
+# DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR
+# SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER
+# CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY,
+# OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
+# OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 project('Imath', 'cpp', 'c', version: '3.0.5')
 
 Imath_VERSION = meson.project_version().split('.')
