[WiX packaging] Perform fake install before packing binaries
	The generated executables have 48.2MB lot of useless symbols before stripping.
	This way, we honor the *-Dstrip=true* option and other install time Meson things.

--- a/packaging/meson.build
+++ b/packaging/meson.build
@@ -62,6 +62,7 @@ destdir_target = custom_target('destdir',
 	depend_files: destdir_depend_files,
 	build_by_default: false,
 )
+destdir_prefix = destdir_target.full_path()+get_option('prefix')
 
 # destdir_md5sum
 # This target run md5sum on DESTDIR (destdir_target)
@@ -210,6 +211,7 @@ copying_rtf = custom_target('COPYING.rtf',
 if candle_prog.found() and light_prog.found() and enable_native_progs
 	# WiX depends
 	wix_deps = [
+		destdir_target,
 		arcollect_exe,
 		copying_rtf,
 		webext_adder_exe,
@@ -221,8 +223,8 @@ if candle_prog.found() and light_prog.found() and enable_native_progs
 	# Configuration
 	wix_conf = configuration_data()
 	wix_conf.merge_from(config_h)
-	wix_conf.set('built_arcollect_exe',arcollect_exe.full_path())
-	wix_conf.set('built_webext_adder_exe',webext_adder_exe.full_path())
+	wix_conf.set('built_arcollect_exe',destdir_prefix/get_option('bindir')/arcollect_exe.full_path().split('/\\')[-1])
+	wix_conf.set('built_webext_adder_exe',destdir_prefix/get_option('libexecdir')/webext_adder_exe.full_path().split('/\\')[-1])
 	wix_conf.set('built_mozilla_manifest',webext_appmanifest_firefox_windows_full_path) # webext_appmanifest_firefox_windows
 	wix_conf.set('copying_rtf_path',copying_rtf.full_path())
 	
